--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
-    <string name="app_name">Calc</string>
+    <string name="app_name">Калькулятор</string>
     <string name="button7">7</string>
+    <string name="button8">8</string>
 </resources>
