--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Калькулятор</string>
     <string name="button7">7</string>
     <string name="button8">8</string>
+    <string name="button9">9</string>
 </resources>
