--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="button7">7</string>
     <string name="button8">8</string>
     <string name="button9">9</string>
+    <string name="button5">5</string>
+    <string name="button4">4</string>
+    <string name="button6">6</string>
 </resources>
