--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="button1">1</string>
     <string name="button2">2</string>
     <string name="button3">3</string>
+    <string name="button0">0</string>
+    <string name="buttonDot">.</string>
 </resources>
