--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,7 @@
     <string name="button3">3</string>
     <string name="button0">0</string>
     <string name="buttonDot">.</string>
+    <string name="buttonClear">C</string>
+    <string name="buttonDivision">/</string>
+    <string name="buttonMultiplication">*</string>
 </resources>
