Добавл кнопки "Вычитание (-)", "Сложение (+)" и "Равно (=)".
Добавил элементы Button, настроил размеры кнопок, настроил привязки кнопок к кнопкам "*", "9", "6", "3" и ".".

P.S. Для кнопки "6" пришлось указать Margin = 24dp. В коде не стал переносить в ресурсы, чтобы потом разобраться, как обойтись без Margin (если это возможно).

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,7 @@
     <string name="buttonClear">C</string>
     <string name="buttonDivision">/</string>
     <string name="buttonMultiplication">*</string>
+    <string name="buttonSubtraction">-</string>
+    <string name="buttonAddition">+</string>
+    <string name="buttonEqually">=</string>
 </resources>
