Добавил свои темы.
Добавил "стандартную тему" и темную тему для калькудятора. Добавил название стилей в ресурсы.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,6 @@
     <string name="buttonSubtraction">-</string>
     <string name="buttonAddition">+</string>
     <string name="buttonEqually">=</string>
+    <string name="MyTheme">=</string>
+    <string name="MyThemeDark">=</string>
 </resources>
