--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,6 @@
     <string name="buttonSubtraction">-</string>
     <string name="buttonAddition">+</string>
     <string name="buttonEqually">=</string>
-    <string name="MyTheme">=</string>
-    <string name="MyThemeDark">=</string>
+    <string name="MyTheme">Моя тема</string>
+    <string name="MyThemeDark">Моя тема (темная)</string>
 </resources>
