Добавил элементы на вторую Activity.
Добавил элементы на вторую Activity для выбора темы приложения: надпись, группу радио-кнопок, кнопку выбора. Добавил фоновый рисунок. Вынес текст и размеры в файлы ресурсов.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,6 @@
     <string name="buttonEqually">=</string>
     <string name="MyTheme">Моя тема</string>
     <string name="MyThemeDark">Моя тема (темная)</string>
+    <string name="settingsTextView">Выберете тему приложения</string>
+    <string name="settingsButtonSelectText">ВЫБРАТЬ</string>
 </resources>
