Изменил состав элементов в MainActivity.
Добавил в MainActivity (для ориентации "Партрет") кнопку "Настройки", настроил ее вид. Удалил группу радио-кнопок для выбора темы приложения.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="MyThemeDark">Моя тема (темная)</string>
     <string name="settingsTextView">Выберете тему приложения</string>
     <string name="settingsButtonSelectText">ВЫБРАТЬ</string>
+    <string name="btnSettingsText">НАСТРОЙКИ</string>
 </resources>
